--- a/main.html
+++ b/main.html
@@ -18,13 +18,11 @@
     </header>
     <div class="country-container">
         <div class="country-selector">
-            <a class="image-link">
-                <img src="" alt="">
-                <div class="text-div">
-                    <p>
+            <a class="image-link" href="">
+                <img src="pictures/London.webp" alt="London pic">
+                <p class="country-name">
                         United Kingdom
-                    </p>
-                </div>
+                </p>
             </a>
 
         </div>
