--- a/main.html
+++ b/main.html
@@ -19,12 +19,35 @@
     <div class="country-container">
         <div class="country-selector">
             <a class="image-link" href="">
-                <img src="pictures/London.webp" alt="London pic">
-                <p class="country-name">
+                <img class="country-image" src="pictures/London.webp" alt="London pic">
+                <div class="country-name-container">
+                    <p class="country-name">
                         United Kingdom
-                </p>
+                    </p> 
+                </div>
             </a>
 
+        </div>
+        <div class="country-selector">
+            <a class="image-link" href="">
+                <img class="country-image" src="pictures/NYC.webp" alt="London pic">
+                <div class="country-name-container">
+                    <p class="country-name">
+                        United States
+                    </p> 
+                </div>
+            </a>
+
+        </div>
+        <div class="country-selector">
+            <a class="image-link" href="">
+                <img class="country-image" src="pictures/Quebec.webp" alt="London pic">
+                <div class="country-name-container">
+                    <p class="country-name">
+                        Canada
+                    </p> 
+                </div>
+            </a>
         </div>
     </div>
 </body>
