first page is almost done

--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -49,6 +50,26 @@
                 </div>
             </a>
         </div>
+    </div>
+    <p class="Introduction">
+        Welcome to <br>
+        Apex Border Solutions
+    </p>
+
+    <div class="Black-block">
+        <p class="Quote">
+            GO WHERE YOU’RE TREATED BEST
+        </p>
+        <p class="Company-text">
+            We create and implement bespoke, holistic strategies for successful investors and entrepreneurs to legally reduce their tax <br>
+            bills, diversify and protect their assets, become global citizens and maximize their freedom.
+        </p>
+        <div class="Center-button">
+            <button class="Register-button">
+                BECOME A CLIENT NOW
+            </button>
+        </div>
+
     </div>
 </body>
 </html>
