--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visa</title>
+    <title>Main</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a class="underline-animation" href="">Countries</a>
+        <a class="underline-animation" href="countries.html">Countries</a>
         <a class="underline-animation" href="">Visa Type</a>
         <a class="underline-animation" href="">Profile</a>
     </header>
