--- a/countries.html
+++ b/countries.html
@@ -26,6 +26,44 @@
             United Kingdom
         </button>
     </div>
+    <div class="Center-button3">
+        <button class="Register-button">
+            Canada
+        </button>
+    </div>
+    <div class="Center-button4">
+        <button class="Register-button">
+            Australia
+        </button>
+    </div>
+    <div class="Center-button5">
+        <button class="Register-button">
+            New Zealand
+        </button>
+    </div>
+    <div class="Center-button6">
+        <button class="Register-button">
+            Ireland
+        </button>
+    </div>
+    <div class="Center-button7">
+        <button class="Register-button">
+            Japan
+        </button>
+    </div>
+    <div class="Center-button8">
+        <button class="Register-button">
+            Taiwan
+        </button>
+    </div>
+    <div class="Center-button9">
+        <button class="Register-button">
+            Singapore
+        </button>
+    </div>
+    <a class="return" href="main.html">
+        Back
+    </a>
 
 
 </body>
