--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 
         </div>
         <div class="country-selector">
-            <a class="image-link" href="">
+            <a class="image-link" href="USA.html">
                 <img class="country-image" src="pictures/NYC.webp" alt="London pic">
                 <div class="country-name-container">
                     <p class="country-name">
