USA page is done

--- a/USA.html
+++ b/USA.html
@@ -15,5 +15,40 @@
         <a class="underline-animation" href="countries.html">Countries</a>
         <a class="underline-animation" href="">Visa Type</a>
         <a class="underline-animation" href="">Profile</a>
+    </header>
+    <div class="image-text">
+        <img class="background-image" src="pictures/Washington.webp" alt="background image">
+        <div class="bottom-left">United States</div>
+    </div>
+    <div class="lower-background">
+        <div class="line"></div>
+        <p class="country-description">
+            The U.S. beckons billionaires with unmatched economic opportunities, strong legal safeguards, and luxurious lifestyles.<br>
+            As the world's top economy, it boasts innovation centers like Silicon Valley (tech), New York (finance), and Miami (crypto/real estate),<br>
+            plus solid IP laws and capital access. Tax perks include no state income tax in Florida or Texas, with federal tools for wealth via trusts and deductions.<br>
+            Elite living features enclaves in Aspen, Beverly Hills, or the Hamptons, with premium security, private jets, and world-class education/healthcare.<br>
+            Fast-track immigration via EB-5 investor visas or O-1 for exceptional talent, in a business-friendly nation rich in culture and natural beauty.
+        </p>
+        <div class="Center-button">
+            <button class="Register-button">
+                Tourism Visa
+            </button>
+        </div>
+        <div class="Center-button2">
+            <button class="Register-button">
+                Work Visa
+            </button>
+        </div>
+        <div class="Center-button3">
+            <button class="Register-button">
+                Student Visa
+            </button>
+        </div>
+        <div class="Center-button4">
+            <button class="Register-button">
+                Immigration Visa
+            </button>
+        </div>
+    </div>    
 </body>
 </html>
