--- a/countries.html
+++ b/countries.html
@@ -17,7 +17,7 @@
         <a class="underline-animation" href="">Profile</a>
     </header>
     <div class="Center-button">
-        <button class="Register-button">
+        <button class="Register-button" onclick="location.href='USA.html'" type="button">
             United States
         </button>
     </div>
