all country pages are done

--- a/Japan.html
+++ b/Japan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>USA</title>
+    <title>japan</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -17,17 +17,18 @@
         <a class="underline-animation" href="">Profile</a>
     </header>
     <div class="image-text">
-        <img class="background-image" src="pictures/Washington.webp" alt="background image">
-        <div class="bottom-left">United States</div>
+        <img class="background-image" src="pictures/japan.webp" alt="background image">
+        <div class="bottom-left">Japan</div>
     </div>
     <div class="lower-background">
         <div class="line"></div>
         <p class="country-description">
-            The U.S. beckons billionaires with unmatched economic opportunities, strong legal safeguards, and luxurious lifestyles.<br>
-            As the world's top economy, it boasts innovation centers like Silicon Valley (tech), New York (finance), and Miami (crypto/real estate),<br>
-            plus solid IP laws and capital access. Tax perks include no state income tax in Florida or Texas, with federal tools for wealth via trusts and deductions.<br>
-            Elite living features enclaves in Aspen, Beverly Hills, or the Hamptons, with premium security, private jets, and world-class education/healthcare.<br>
-            Fast-track immigration via EB-5 investor visas or O-1 for exceptional talent, in a business-friendly nation rich in culture and natural beauty.
+            Japan entices billionaires with robust economic prospects, strong legal protections, and opulent lifestyles. As a leading global economy, it features hubs like<br> 
+            Tokyo (tech, finance, AI, and fintech), Osaka (biotech and manufacturing), and Kyoto (innovation and fusion tech), bolstered by solid IP laws and access to<br> 
+            Asia-Pacific markets. Tax perks include foreign tax credits to mitigate double taxation, R&D incentives, and strategic tools like holding companies,<br> 
+            though residents face worldwide income taxation up to 45% (with a 2025 minimum tax for ultra-high earners). Elite enclaves span Tokyo's Minato<br> 
+            (Azabu and Hiroo), Shibuya (Shoto), Motoazabu, and Roppongi, plus Karuizawa retreats, with premium security, private aviation,<br> 
+            and world-class education/healthcare. Streamlined immigration via Business Manager Visa (¥5M investment in a business) or Startup Visa.
         </p>
         <div class="Center-button">
             <button class="Register-button">
