--- a/countries.html
+++ b/countries.html
@@ -22,42 +22,42 @@
         </button>
     </div>
     <div class="Center-button2">
-        <button class="Register-button">
+        <button class="Register-button" onclick="location.href='UK.html'" type="button">
             United Kingdom
         </button>
     </div>
     <div class="Center-button3">
-        <button class="Register-button">
+        <button class="Register-button" onclick="location.href='Canada.html'" type="button">
             Canada
         </button>
     </div>
     <div class="Center-button4">
-        <button class="Register-button">
+        <button class="Register-button" onclick="location.href='Australia.html'" type="button">
             Australia
         </button>
     </div>
     <div class="Center-button5">
-        <button class="Register-button">
+        <button class="Register-button" onclick="location.href='NewZealand.html'" type="button">
             New Zealand
         </button>
     </div>
     <div class="Center-button6">
-        <button class="Register-button">
+        <button class="Register-button" onclick="location.href='Ireland.html'" type="button">
             Ireland
         </button>
     </div>
     <div class="Center-button7">
-        <button class="Register-button">
+        <button class="Register-button" onclick="location.href='Japan.html'" type="button">
             Japan
         </button>
     </div>
     <div class="Center-button8">
-        <button class="Register-button">
+        <button class="Register-button" onclick="location.href='Taiwan.html'" type="button">
             Taiwan
         </button>
     </div>
     <div class="Center-button9">
-        <button class="Register-button">
+        <button class="Register-button" onclick="location.href='Singapore.html'" type="button">
             Singapore
         </button>
     </div>
