--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
     </header>
     <div class="country-container">
         <div class="country-selector">
-            <a class="image-link" href="">
+            <a class="image-link" href="UK.html">
                 <img class="country-image" src="pictures/London.webp" alt="London pic">
                 <div class="country-name-container">
                     <p class="country-name">
@@ -41,7 +41,7 @@
 
         </div>
         <div class="country-selector">
-            <a class="image-link" href="">
+            <a class="image-link" href="Canada.html">
                 <img class="country-image" src="pictures/Quebec.webp" alt="London pic">
                 <div class="country-name-container">
                     <p class="country-name">
