--- a/NewZealand.html
+++ b/NewZealand.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>USA</title>
+    <title>NZ</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -17,17 +17,17 @@
         <a class="underline-animation" href="">Profile</a>
     </header>
     <div class="image-text">
-        <img class="background-image" src="pictures/Washington.webp" alt="background image">
-        <div class="bottom-left">United States</div>
+        <img class="background-image" src="pictures/nz.webp" alt="background image">
+        <div class="bottom-left">New Zealand</div>
     </div>
     <div class="lower-background">
         <div class="line"></div>
         <p class="country-description">
-            The U.S. beckons billionaires with unmatched economic opportunities, strong legal safeguards, and luxurious lifestyles.<br>
-            As the world's top economy, it boasts innovation centers like Silicon Valley (tech), New York (finance), and Miami (crypto/real estate),<br>
-            plus solid IP laws and capital access. Tax perks include no state income tax in Florida or Texas, with federal tools for wealth via trusts and deductions.<br>
-            Elite living features enclaves in Aspen, Beverly Hills, or the Hamptons, with premium security, private jets, and world-class education/healthcare.<br>
-            Fast-track immigration via EB-5 investor visas or O-1 for exceptional talent, in a business-friendly nation rich in culture and natural beauty.
+            New Zealand entices billionaires with robust economic prospects, strong legal protections, and opulent lifestyles. As a dynamic Asia-Pacific economy,<br>
+            it features hubs like Auckland (tech and finance), Christchurch (innovation and biotech), and Wellington (government and startups),<br>
+            bolstered by solid IP laws aligned with international standards and access to regional markets.<br>
+            Tax perks include a 4-year exemption on foreign-sourced income for new residents, plus tools like trusts and<br> 
+            the new Revenue Account Method offering a 30% discount on foreign investment gains. 
         </p>
         <div class="Center-button">
             <button class="Register-button">
