--- a/Taiwan.html
+++ b/Taiwan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>USA</title>
+    <title>taiwan</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -17,17 +17,16 @@
         <a class="underline-animation" href="">Profile</a>
     </header>
     <div class="image-text">
-        <img class="background-image" src="pictures/Washington.webp" alt="background image">
-        <div class="bottom-left">United States</div>
+        <img class="background-image" src="pictures/taiwan.webp" alt="background image">
+        <div class="bottom-left">Taiwan</div>
     </div>
     <div class="lower-background">
         <div class="line"></div>
         <p class="country-description">
-            The U.S. beckons billionaires with unmatched economic opportunities, strong legal safeguards, and luxurious lifestyles.<br>
-            As the world's top economy, it boasts innovation centers like Silicon Valley (tech), New York (finance), and Miami (crypto/real estate),<br>
-            plus solid IP laws and capital access. Tax perks include no state income tax in Florida or Texas, with federal tools for wealth via trusts and deductions.<br>
-            Elite living features enclaves in Aspen, Beverly Hills, or the Hamptons, with premium security, private jets, and world-class education/healthcare.<br>
-            Fast-track immigration via EB-5 investor visas or O-1 for exceptional talent, in a business-friendly nation rich in culture and natural beauty.
+            Taiwan entices billionaires with robust economic prospects, strong legal protections, and opulent lifestyles. As Asia's innovation powerhouse and AI hub,<br> 
+            it features centers like Taipei (finance and fintech), Hsinchu Science Park (semiconductors and tech), and Taichung (manufacturing and innovation),<br> 
+            bolstered by solid IP laws and access to global supply chains. Tax perks include a five-year 50% deduction on salary income exceeding NT$3M for<br> 
+            Gold Card holders, foreign tax credits, and incentives for immigrant investors via remittance-based taxation on non-Taiwan sourced income.
         </p>
         <div class="Center-button">
             <button class="Register-button">
