--- a/NewZealand.html
+++ b/NewZealand.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <a class="underline-animation" href="countries.html">Countries</a>
-        <a class="underline-animation" href="">Visa Type</a>
-        <a class="underline-animation" href="">Profile</a>
+        <a class="underline-animation" href="visaselection.html">Visa Type</a>
+        <a class="underline-animation" href="Profile.html">Profile</a>
     </header>
     <div class="image-text">
         <img class="background-image" src="pictures/nz.webp" alt="background image">
