--- a/USA.html
+++ b/USA.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <a class="underline-animation" href="countries.html">Countries</a>
-        <a class="underline-animation" href="">Visa Type</a>
-        <a class="underline-animation" href="">Profile</a>
+        <a class="underline-animation" href="visaselection.html">Visa Type</a>
+        <a class="underline-animation" href="Profile.html">Profile</a>
     </header>
     <div class="image-text">
         <img class="background-image" src="pictures/Washington.webp" alt="background image">
@@ -30,22 +30,22 @@
             Fast-track immigration via EB-5 investor visas or O-1 for exceptional talent, in a business-friendly nation rich in culture and natural beauty.
         </p>
         <div class="Center-button">
-            <button class="Register-button">
+            <button class="Register-button" onclick="location.href='USAtourvisa.html'" type="button">
                 Tourism Visa
             </button>
         </div>
         <div class="Center-button2">
-            <button class="Register-button">
+            <button class="Register-button" onclick="location.href='USAworkvisa.html'" type="button">
                 Work Visa
             </button>
         </div>
         <div class="Center-button3">
-            <button class="Register-button">
+            <button class="Register-button" onclick="location.href='USAstudentvisa.html'" type="button">
                 Student Visa
             </button>
         </div>
         <div class="Center-button4">
-            <button class="Register-button">
+            <button class="Register-button" onclick="location.href='USAimmigrationvisa.html'" type="button">
                 Immigration Visa
             </button>
         </div>
