--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <a class="underline-animation" href="countries.html">Countries</a>
-        <a class="underline-animation" href="">Visa Type</a>
-        <a class="underline-animation" href="">Profile</a>
+        <a class="underline-animation" href="visaselection.html">Visa Type</a>
+        <a class="underline-animation" href="Profile.html">Profile</a>
     </header>
     <div class="country-container">
         <div class="country-selector">
