--- a/visaselection.html
+++ b/visaselection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countries</title>
+    <title>Visa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -12,53 +12,28 @@
 </head>
 <body>
      <header>
-        <a class="underline-animation" href="">Countries</a>
-        <a class="underline-animation" href="visaselection.html">Visa Type</a>
+        <a class="underline-animation" href="countries.html">Countries</a>
+        <a class="underline-animation" href="">Visa Type</a>
         <a class="underline-animation" href="Profile.html">Profile</a>
     </header>
     <div class="Center-button">
         <button class="Register-button" onclick="location.href='USA.html'" type="button">
-            United States
+            Tourism Visa
         </button>
     </div>
     <div class="Center-button2">
         <button class="Register-button" onclick="location.href='UK.html'" type="button">
-            United Kingdom
+            Work Visa
         </button>
     </div>
     <div class="Center-button3">
         <button class="Register-button" onclick="location.href='Canada.html'" type="button">
-            Canada
+            Student Visa
         </button>
     </div>
     <div class="Center-button4">
         <button class="Register-button" onclick="location.href='Australia.html'" type="button">
-            Australia
-        </button>
-    </div>
-    <div class="Center-button5">
-        <button class="Register-button" onclick="location.href='NewZealand.html'" type="button">
-            New Zealand
-        </button>
-    </div>
-    <div class="Center-button6">
-        <button class="Register-button" onclick="location.href='Ireland.html'" type="button">
-            Ireland
-        </button>
-    </div>
-    <div class="Center-button7">
-        <button class="Register-button" onclick="location.href='Japan.html'" type="button">
-            Japan
-        </button>
-    </div>
-    <div class="Center-button8">
-        <button class="Register-button" onclick="location.href='Taiwan.html'" type="button">
-            Taiwan
-        </button>
-    </div>
-    <div class="Center-button9">
-        <button class="Register-button" onclick="location.href='Singapore.html'" type="button">
-            Singapore
+            Immigration Visa
         </button>
     </div>
     <a class="return" href="main.html">
