--- a/Profile.html
+++ b/Profile.html
@@ -22,11 +22,16 @@
             <input type="text" id="fname" name="fname" placeholder="Your first name">
             <label for="lname">Last Name:</label>
             <input type="text" id="lname" name="lname" placeholder="Your last name">
+            <label for="Email">Email:</label>
+            <input type="text" id="Email" name="Email" placeholder="youremail@gmail.com">
+            <label for="Phone">Phone:</label>
+            <input type="text" id="Phone" name="Phone" placeholder="+7932324903">
             <label for="country">Country:</label>
             <select id="country" name="country">
                 <option value="australia">Australia</option>
                 <option value="canada">Canada</option>
                 <option value="usa">USA</option>
+                <option value="Russia">Russia</option>
             </select>
             <input type="submit" value="Submit">
         </form>
